# rai-keygen

./: .bumpversion.cfg  .gitignore  .goreleaser.yml  .travis.yml  BUILD.bazel  Gopkg.toml  Makefile  README.md  WORKSPACE  glide.yaml  lock.json  main.go  manifest.json  rai_config.yml  secret.go  version.go
_fixture/: email.template  maillist.csv
cmd/: BUILD.bazel  delete.go  email.go  email.template  getkey.go  init.go  root.go  secret.go  static_content.go  update.go  utils.go
doc/: rai-keygen.md  rai-keygen_completion.md  rai-keygen_doc.md  rai-keygen_emailkeys.md  rai-keygen_env.md  rai-keygen_license.md  rai-keygen_version.md
snap/: snapcraft.yaml
