# gazelle:exclude static_content.go

load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//:esc.bzl", "esc")

# keep
esc(
    name = "static_content",
    srcs = ["//:rai_config.yml"],
    package = "cmd",
)

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "delete.go",
        "email.go",
        "getkey.go",
        "init.go",
        "resources.go",
        "root.go",
        "update.go",
        ":static_content",  #keep
    ],
    importpath = "github.com/rai-project/rai-keygen/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/Unknwon/com:go_default_library",
        "//vendor/github.com/fatih/color:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/github.com/rai-project/auth:go_default_library",
        "//vendor/github.com/rai-project/auth/provider:go_default_library",
        "//vendor/github.com/rai-project/cmd:go_default_library",
        "//vendor/github.com/rai-project/config:go_default_library",
        "//vendor/github.com/rai-project/email/mailgun:go_default_library",
        "//vendor/github.com/rai-project/logger:go_default_library",
        "//vendor/github.com/rai-project/logger/hooks:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
        "//vendor/github.com/spf13/viper:go_default_library",
        "//vendor/gopkg.in/yaml.v2:go_default_library",
    ],
)
